--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Software Engineering</title>
   <link rel="stylesheet" href="css/uikit.min.css">
-  <link rel="stylesheet" href="css/uikit.css">
-  <script src="js/uikit.min.css"></script>
-  <script src="js/uikit.css"></script>
+  <!--<link rel="stylesheet" href="css/uikit.css">-->
+  <script src="js/uikit.min.js"></script>
+  <!--<script src="js/uikit.js"></script>-->
 </head>
 
 <body>
@@ -74,11 +74,23 @@
   <br>
 
   <!--test accordion-->
+  <div>
+    <h1>Branch Subjects</h1>
+  </div>
   <ul uk-accordion="multiple: true">
     <li class="uk-open">
-        <a class="uk-accordion-title" href="#">Item 1</a>
+        <a class="uk-accordion-title" href="#">SOFTWARE ENGINEERING</a>
         <div class="uk-accordion-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Subject code: 06016321<br>
+            PREREQUISITE : 06016306 INFORMATION SYSTEMS ANALYSIS AND DESIGN<br>
+            Credit: 3(3-0-6)<br>
+            Introduction to software engineering; software categories and evolution;software
+            engineering process framework; agile software development methodology; design pattern;
+            software engineering practice; software development environment using version control;
+            capability maturity model integration (CMMI); requirement engineering; analysis and design
+            engineering; introduction to software testing; unified process; process evaluation; and
+            prescriptive and evolutionary process models.
+          </p>
         </div>
     </li>
     <li>
