--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Software Engineering</title>
   <link rel="stylesheet" href="css/uikit.min.css">
+  <link rel="stylesheet" href="script.css">
   <!--<link rel="stylesheet" href="css/uikit.css">-->
   <script src="js/uikit.min.js"></script>
   <!--<script src="js/uikit.js"></script>-->
@@ -258,21 +259,6 @@
         </div>
     </li>
 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <!-- TABLE -->
   <div style="text-align: center;"><button class="uk-button uk-button-default" type="button" uk-toggle="target: .toggle">CHANGE TABLE</button></div>
