--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -12,9 +12,9 @@
   <!--<script src="js/uikit.js"></script>-->
 </head>
 
-<body>
+<body onload="myFunction()" style="margin:0;">
   <!--spinner-->
-  <div uk-spinner="ratio: 3"></div>
+  <div id="loader" uk-spinner="ratio: 3"></div>
 
   <!--Web header-->
   <div class="header">SOFTWARE ENGINEERING</div>
@@ -80,158 +80,155 @@
 
   <ul uk-accordion="multiple: true">
     <li class="uk-open">
-        <a class="uk-accordion-title" href="#">SOFTWARE ENGINEERING</a>
-        <div class="uk-accordion-content">
-          <p>Subject code: 06016321<br>
-            PREREQUISITE : 06016306 INFORMATION SYSTEMS ANALYSIS AND DESIGN<br>
-            Credit: 3(3-0-6)<br>
-            Introduction to software engineering; software categories and evolution;software
-            engineering process framework; agile software development methodology; design pattern;
-            software engineering practice; software development environment using version control;
-            capability maturity model integration (CMMI); requirement engineering; analysis and design
-            engineering; introduction to software testing; unified process; process evaluation; and
-            prescriptive and evolutionary process models.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">SOFTWARE ENGINEERING</a>
+      <div class="uk-accordion-content">
+        <p>Subject code: 06016321<br>
+          PREREQUISITE : 06016306 INFORMATION SYSTEMS ANALYSIS AND DESIGN<br>
+          Credit: 3(3-0-6)<br>
+          Introduction to software engineering; software categories and evolution;software
+          engineering process framework; agile software development methodology; design pattern;
+          software engineering practice; software development environment using version control;
+          capability maturity model integration (CMMI); requirement engineering; analysis and design
+          engineering; introduction to software testing; unified process; process evaluation; and
+          prescriptive and evolutionary process models.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">WEB PROGRAMMING</a>
-        <div class="uk-accordion-content">
-            <p>Subject code: 06016322<br>
-            Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
-            Credit: 3(2-2-5)<br>
-            Dynamic web pages development; HTTP protocol;web servers; server-side web
-            programming; cookies handling; session tracking; web database application development;
-            Javascript and AJAX technology
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">WEB PROGRAMMING</a>
+      <div class="uk-accordion-content">
+        <p>Subject code: 06016322<br>
+          Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
+          Credit: 3(2-2-5)<br>
+          Dynamic web pages development; HTTP protocol;web servers; server-side web
+          programming; cookies handling; session tracking; web database application development;
+          Javascript and AJAX technology
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">MOBILE DEVICE PROGRAMMING</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016323<br>
-            Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
-            Credit: 3(2-2-5)<br>
-            Introduction to technology and the programming of applicationfor mobile computing including devices
-            i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">MOBILE DEVICE PROGRAMMING</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016323<br>
+          Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
+          Credit: 3(2-2-5)<br>
+          Introduction to technology and the programming of applicationfor mobile computing including devices
+          i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">REQUIREMENT ENGINEERING</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016324<br>
-            Prerequisite: NONE<br>
-            Credit: 3(3-0-6)<br>
-            Requirements management technique; problem analysis; stakeholder needs;
-            document requirements with use-case model; document hierarchy and standard for define requirements level;
-            system definition; scope managing; requirement attributes and traceability;
-            manage change; using requirements to drive ongoing design, test, and user documentation.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">REQUIREMENT ENGINEERING</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016324<br>
+          Prerequisite: NONE<br>
+          Credit: 3(3-0-6)<br>
+          Requirements management technique; problem analysis; stakeholder needs;
+          document requirements with use-case model; document hierarchy and standard for define requirements level;
+          system definition; scope managing; requirement attributes and traceability;
+          manage change; using requirements to drive ongoing design, test, and user documentation.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">SERVICE-ORIENTED PROGRAMMING</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016325<br>
-            Prerequisite: NONE<br>
-            Credit: 3(2-2-5)<br>
-            Concepts and structures of web services; web services standards;
-            development and deployment of web service applications; concept of Service-Oriented Architecture (SOA);
-            features and benefits of enterprise service bus (ESB); business process management (BPM)
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">SERVICE-ORIENTED PROGRAMMING</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016325<br>
+          Prerequisite: NONE<br>
+          Credit: 3(2-2-5)<br>
+          Concepts and structures of web services; web services standards;
+          development and deployment of web service applications; concept of Service-Oriented Architecture (SOA);
+          features and benefits of enterprise service bus (ESB); business process management (BPM)
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">SOFTWARE VERIFICATION AND VALIDATION</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016326<br>
-            Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN<br>
-            Credit: 3(3-0-6)<br>
-            Role of V&V in software evolution; software technical reviews; levels of software testing; testing techniques;
-            proof of correctness; simulation and prototyping; requirements tracing; software V&V planning; tracking
-            test activities; problem tracking and assessment.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">SOFTWARE VERIFICATION AND VALIDATION</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016326<br>
+          Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN<br>
+          Credit: 3(3-0-6)<br>
+          Role of V&V in software evolution; software technical reviews; levels of software testing; testing techniques;
+          proof of correctness; simulation and prototyping; requirements tracing; software V&V planning; tracking
+          test activities; problem tracking and assessment.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016327<br>
-            Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING<br>
-            Credit: 3(2-2-5)<br>
-            Introduction to cloud technology, cloud architecture, virtualization and
-            multi-tenancy features, principles to develop enterprise application in cloud,
-            declarative and problematic application development, governances limits,
-            frequently encountered issues during cloud-based, application development,
-            requirements or capability factors towards the selection of appropriate development paradigm,
-            data analytics using cloud platforms, principle to cloud database management, NoSQL.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016327<br>
+          Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING<br>
+          Credit: 3(2-2-5)<br>
+          Introduction to cloud technology, cloud architecture, virtualization and
+          multi-tenancy features, principles to develop enterprise application in cloud,
+          declarative and problematic application development, governances limits,
+          frequently encountered issues during cloud-based, application development,
+          requirements or capability factors towards the selection of appropriate development paradigm,
+          data analytics using cloud platforms, principle to cloud database management, NoSQL.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016328<br>
-            Prerequisite: NONE<br>
-            Credit: 3(2-2-5)<br>
-            Principles to software professionals, role of applications in software engineering tasks,
-            agile software development tools, product
-            development tracking, version and configuration management, build and continuous integration tools,
-            program debugging and profiling tools, collaborative development environment, packaging and development tools.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016328<br>
+          Prerequisite: NONE<br>
+          Credit: 3(2-2-5)<br>
+          Principles to software professionals, role of applications in software engineering tasks,
+          agile software development tools, product
+          development tracking, version and configuration management, build and continuous integration tools,
+          program debugging and profiling tools, collaborative development environment, packaging and development tools.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">PROJECT IN SOFTWARE ENGINEERING 1</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016329<br>
-            Prerequisite: NONE<br>
-            Credit: 3(0-9-0)<br>
-            Study or research of interesting current topics in software engineering undertaking a work project based
-            by applying the theoretical aspects of the information technology studies under the supervision of
-            a faculty member to be able to present a project proposal and elementary result from practical solving or academic analysis.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">PROJECT IN SOFTWARE ENGINEERING 1</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016329<br>
+          Prerequisite: NONE<br>
+          Credit: 3(0-9-0)<br>
+          Study or research of interesting current topics in software engineering undertaking a work project based
+          by applying the theoretical aspects of the information technology studies under the supervision of
+          a faculty member to be able to present a project proposal and elementary result from practical solving or academic analysis.
+        </p>
+      </div>
     </li>
     <li>
-        <a class="uk-accordion-title" href="#">PROJECT IN SOFTWARE ENGINEERING 2</a>
-        <div class="uk-accordion-content">
-          <p>
-            Subject code: 06016330<br>
-            Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1<br>
-            Credit: 3(0-9-0)<br>
-            Study or research of interesting current topics in software engineering undertaking a work project based
-            by applying the theoretical aspects of the information technology studies under the supervision of
-            a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.
-          </p>
-        </div>
+      <a class="uk-accordion-title" href="#">PROJECT IN SOFTWARE ENGINEERING 2</a>
+      <div class="uk-accordion-content">
+        <p>
+          Subject code: 06016330<br>
+          Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1<br>
+          Credit: 3(0-9-0)<br>
+          Study or research of interesting current topics in software engineering undertaking a work project based
+          by applying the theoretical aspects of the information technology studies under the supervision of
+          a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.
+        </p>
+      </div>
     </li>
-</ul>
+  </ul>
 
+  <!--in file script-->
+  <script>
+    var myVar;
 
+    function myFunction() {
+      myVar = setTimeout(showPage(), 3000);
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    function showPage() {
+      document.getElementById("loader").style.display = "none";
+      document.getElementById("bg1").style.display = "block";
+    }
+  </script>
 
 </body>
 
