--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -7,14 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Software Engineering</title>
   <link rel="stylesheet" href="css/uikit.min.css">
-  <link rel="stylesheet" href="script.css">
+  <link rel="stylesheet" href="css/script.css">
   <!--<link rel="stylesheet" href="css/uikit.css">-->
   <script src="js/uikit.min.js"></script>
   <!--<script src="js/uikit.js"></script>-->
 </head>
 
 <body onload="myFunction()" style="margin:0;">
-<body>
 
   <!-- NAVBAR -->
   <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
@@ -263,7 +262,7 @@
 
 
   <!-- TABLE -->
-  <div style="text-align: center;"><button class="uk-button uk-button-default" type="button" uk-toggle="target: .toggle">CHANGE TABLE</button></div>
+  <div style="text-align: center;"><button class="uk-button uk-button-default" type="button" uk-toggle="target: .toggle">SWITCH TABLE BETWEEN COOPERATIVE/WITHOUT COOPERATIVE</button></div>
   <!--///////////////////////// TABLE  PROJECT /////////////////////////////////-->
   <p class="toggle" align="center" id="head_table_project"><b>Without Cooperative Work</b></p>
   <table class="toggle" id="branch_subjects_table_project" width="90%" align="center">
