add img for header

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -61,7 +61,9 @@
   <div id="loader" uk-spinner="ratio: 3"></div>
 
   <!--Web header-->
-  <div class="header">SOFTWARE ENGINEERING</div>
+  <div class="title_header" id="bg1">
+    <h1>SOFTWARE ENGINEERING</h1>
+  </div>
 
   <!--About Course-->
   <div>
