--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -16,19 +16,22 @@
 <body onload="myFunction()" style="margin:0;">
 
   <!-- NAVBAR -->
-  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
-    <nav class="uk-navbar-container" uk-navbar style="position: relative; z-index: 980;">
+  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar" >
+    <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
       <div class="uk-navbar-right">
-
         <ul class="uk-navbar-nav">
           <li>
             <a href="#">ABOUT</a>
             <div class="uk-navbar-dropdown">
               <ul class="uk-nav uk-navbar-dropdown-nav">
                 <li><a href="#">WHAT IS SOFTWARE ENGINEERING</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">DIFFERENT</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">ELIGIBLE</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">TO DE / TO HAVE</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">EXAMPLE CAREER</a></li>
               </ul>
             </div>
@@ -38,14 +41,23 @@
             <div class="uk-navbar-dropdown">
               <ul class="uk-nav uk-navbar-dropdown-nav">
                 <li><a href="#">SOFTWARE ENGINEERING</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">WEB PROGRAMMING</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">MOBILE DEVICE PROGRAMMING</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">REQUIREMENT ENGINEERING</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">SERVICE-ORIENTED PROGRAMMING</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">SOFTWARE VERIFICATION AND VALIDATION</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">PROJECT IN SOFTWARE ENGINEERING 1</a></li>
+                <li class="uk-nav-divider"></li>
                 <li><a href="#">PROJECT IN SOFTWARE ENGINEERING 2</a></li>
               </ul>
             </div>
